tests/snapshots/run_wpt_conformance__onnx_relu_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "relu.https.any.js",
    "relu int64 4D tensor",
    "onnx",
    "PASS",
)
