tests/snapshots/run_wpt_conformance__onnx_reverse_float32_2D_input_with_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reverse.https.any.js",
    "reverse float32 2D input with default options",
    "onnx",
    "PASS",
)
