tests/snapshots/run_wpt_conformance__onnx_roundEven_float16_negative_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "round_even.https.any.js",
    "roundEven float16 negative 1D tensor",
    "onnx",
    "PASS",
)
